Fix the pixel-alignment issues

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -101,11 +101,16 @@ ul li a:hover{
     transform: translateY(-25%)
 }
 
-.fa-search, .fa-shopping-basket{
-    font-size: 20px;
-}
+
 .fa-shopping-basket{
-    margin-left: -20px;
+    font-size: 21px;
+    margin-left: -21px;
+    transform: translateY(4px)
+}
+.fa-search{
+    font-size: 23px;
+    margin-left: -8px;
+    transform: translateY(5px)
 }
 
 
@@ -140,13 +145,13 @@ ul li a:hover{
 }
 .heading-primary-sub{
     font-family: "Lato";
-    letter-spacing: 0.7px;
+    letter-spacing: 0.95px;
     word-spacing: 1.8px;
     display: block;
     text-transform: capitalize;
     font-size: 19px;
-    font-weight: 200;
-    transform: translateX(39.8px)
+    font-weight: 300;
+    transform: translateX(39px)
 }
 
 .section-1 .fa-arrow-left, .section-1 .fa-arrow-right{
@@ -215,24 +220,25 @@ ul li a:hover{
     text-transform: uppercase;
     font-family: "Lato";
     font-weight: 900;
-    font-size: 25px;
-    word-spacing: 4px;
-    letter-spacing: 1px;
+    font-size: 24px;
+    word-spacing: 2px;
+    letter-spacing: 2px;
 }
 .introduction p{
-    letter-spacing: 0.3px;
-    width: 445px;
+    letter-spacing: 0.38px;
+    width: 457px;
     word-spacing: 2px;
     color: #A1B1BC;
     font-family: "Lato";
     font-size: 11px;
-    line-height: 19px;
-    word-spacing: 1.9px;
-    margin-bottom: 21px;
+    line-height: 19.3px;
+    word-spacing: 1.8px;
+    margin-bottom: 19px;
 }
 .introduction .info{
     margin-left: 17px;
     width: 569.33px;
+    margin-top: 1px;
 }
 .introduction a{
     text-transform: uppercase;
@@ -262,6 +268,7 @@ ul li a:hover{
     flex-direction: row;
     position: relative;
     height: 289px;
+    width: 101%;
 }
 
 
@@ -280,30 +287,30 @@ ul li a:hover{
     font-family: 'Lato';
     line-height: 24px;
     margin-bottom: 30px;
-    line-height: 20px;
+    line-height: 19.3px;
     letter-spacing: 0.5px;
-    word-spacing: -0.4px;
 }
 
 .section-3 h4{
-    margin-bottom: 8px;
+    margin-bottom: 9px;
     position: relative;
-    margin-top: 59.3px;
+    margin-top: 61.5px;
     font-size: 12px;
     font-family: 'Lato';
-    letter-spacing: 1.5px;
+    letter-spacing: 1.3px;
     text-transform: uppercase;
 }
 .section-3 a{
     font-family: 'Lato';
-    font-size: 13px;
+    font-size: 12px;
+    font-weight: 900;
     position: relative;
     text-decoration: none;
     color: #fff;
     text-transform: uppercase;
     border: 2px solid #fff;
     border-radius: 5px;
-    padding: 11px 15px;
+    padding: 11px 18px;
 }
 .feature{
     margin: 0px, 30px;
@@ -324,7 +331,7 @@ ul li a:hover{
 .section-3 div div{
     height: fit-content;
     display: block;
-    padding-left: 15%;
+    padding-left: 12.5%;
     padding-right: 10%;
 }
 
@@ -344,11 +351,11 @@ ul li a:hover{
 
 }
 .items img{
-    right: 38.7%;
+    right: 38.5%;
     top: -18px;
     position: absolute;
     z-index: 1;
-    height: 150%;
+    height: 149.8%;
     -webkit-filter: drop-shadow(5px 5px 5px rgb(110, 110, 110) );
     filter: drop-shadow(-5px 5px 5px rgba(133, 133, 133, 0.363));
 }
@@ -359,16 +366,18 @@ ul li a:hover{
     font-family: "Lato";
     font-weight: 900;
     font-size: 25px;
-    letter-spacing: 2px;
+    letter-spacing: 1.7px;
 }
 .items p{
+    display: block;
+    width: 455px;
     color: #A1B1BC;
     font-family: "Lato";
     font-size: 11px;
     line-height: 19px;
-    word-spacing: 1.9px;
+    word-spacing: 1.3px;
     margin-bottom: 27px;
-    letter-spacing: 0.3px;
+    letter-spacing: 0.46px;
 }
 .items .info{
     width: 30%;
@@ -380,12 +389,13 @@ ul li a:hover{
     text-decoration: none;
     color: #2C3E50;
     font-family: 'Lato';
-    font-size: 12px;
+    font-weight: 700;
+    font-size: 13px;
     line-height: 36px;
     border: solid #2C3E50 2px;
     border-radius: 5px;
     word-spacing: 2px;
-    padding: 7px 32px;
+    padding: 7px 28px;
 }
 .items hr{
     width: 100px;
@@ -400,7 +410,7 @@ ul li a:hover{
     font-family: 'Lato';
     font-size: 12px;
     margin: 8.5px 0px;
-
+    word-spacing: 1px;
 }
 .items .info span{
     color: #2C3E50;
